# kappa

./: Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yml  package.yml
.github/: release-body.md
.github/scripts/: cargo-args
.github/workflows/: Dockerfile.aarch64-unknown-linux-musl  Dockerfile.armv7-unknown-linux-musleabihf  Dockerfile.x86_64-unknown-linux-musl  build.yml  publish.yml
ebpf-0.0.4/: Cargo.toml  Cargo.toml.orig  README.md
ebpf-0.0.4/src/: bpf.rs  elf.rs  ffi.rs  lib.rs  sys.rs  xdp.rs
kentik-api/: Cargo.toml
kentik-api/examples/: test.rs
kentik-api/src/: client.rs  error.rs  lib.rs  main.rs
kentik-api/src/api/: device.rs  flow.rs  mod.rs
kentik-api/src/serde/: str.rs
pkg/etc/default/: kappa
pkg/etc/systemd/system/: kappa-agent.service  kappa-agg.service
pkg/scripts/: post-install
src/: agent.rs  agg.rs  args.rs  args.yml  lib.rs  main.rs  probe.rs
src/augment/: augment.rs  mod.rs  object.rs
src/capture/: capture.rs  config.rs  decode.rs  flow.rs  mod.rs  queue.rs  sample.rs  source.rs  test.rs  time.rs  timer.rs
src/collect/: collect.rs  mod.rs  record.rs  sink.rs
src/combine/: combine.rs  mod.rs
src/export/: column.rs  export.rs  mod.rs  pack.rs  socket.rs
src/link/: mod.rs  monitor.rs
src/link/linux/: links.rs  mod.rs  monitor.rs  peer.rs
src/os/: mod.rs
src/os/linux/: mod.rs
src/packet/: decode.rs  mod.rs  packet.rs
src/probes/: events.rs  mod.rs  poll.rs  probes.rs  trace.rs  version.rs
src/process/: empty.rs  linux.rs  mod.rs  monitor.rs  posix.rs  procs.rs
src/process/empty/: mod.rs  monitor.rs
src/process/linux/: cache.rs  lookup.rs  mod.rs  monitor.rs
src/sockets/: mod.rs  monitor.rs  sockets.rs
src/sockets/linux/: cache.rs  lookup.rs  mod.rs  monitor.rs
