[package]
name    = "kappa"
version = "0.0.2-dev"
authors = ["Will <will@kentik.com>"]
edition = "2018"

[dependencies]
anyhow            = "1.0.26"
capnp             = "0.12.1"
crossbeam-channel = "0.4.0"
errno             = "0.2.4"
futures           = "0.3.4"
futures-util      = "0.3.4"
jemallocator      = "0.3.2"
nixv              = "0.0.1"
num_cpus          = "1.12.0"
libc              = "0.2.66"
log               = "0.4.8"
parking_lot       = "0.10.0"
pcap              = "0.7.0"
regex             = "1.3.4"
serde_json        = "1.0.47"
signal-hook       = "0.1.13"
time              = "0.1.42"

[dependencies.clap]
version  = "2.33.0"
features = ["yaml"]
default-features = false

[dependencies.env_logger]
version  = "0.7.1"
features = ["humantime"]
default-features = false

[dependencies.pnet]
version  = "0.23.0"
features = ["serde"]

[dependencies.serde]
version  = "1.0.104"
features = ["derive", "rc"]

[dependencies.tokio]
version  = "0.2.11"
features = ["full"]

[dependencies.tokio-util]
version  = "0.2.0"
features = ["codec"]

[dependencies.tokio-serde]
version  = "0.6.0"
features = ["json"]

[dependencies.kentik-api]
path = "./kentik-api"

[target.'cfg(target_os = "linux")'.dependencies]
bpf  = "0.1.3"
ebpf = "0.0.4"
nell = "0.2.0"
nixv = "0.0.1"
perf = "0.0.2"

[build-dependencies]
capnpc = "0.12.0"

[patch.crates-io]
ebpf = { path = "ebpf-0.0.4" }

[profile.release]
lto   = false
debug = true
