[package]
name    = "kappa"
version = "0.0.3"
authors = ["Will <will@kentik.com>"]
edition = "2018"

[dependencies]
anyhow            = "1.0.35"
capnp             = "0.13.6"
crossbeam-channel = "0.5.0"
errno             = "0.2.7"
futures           = "0.3.8"
futures-util      = "0.3.8"
jemallocator      = "0.3.2"
nixv              = "0.0.1"
num_cpus          = "1.13.0"
libc              = "0.2.81"
log               = "0.4.11"
parking_lot       = "0.11.1"
pcap              = "0.7.0"
regex             = "1.4.2"
serde_json        = "1.0.60"
signal-hook       = "0.2.2"
time              = "0.1.42"

[dependencies.clap]
version  = "2.33.3"
features = ["yaml"]
default-features = false

[dependencies.env_logger]
version  = "0.8.2"
features = ["humantime"]
default-features = false

[dependencies.pnet]
version  = "0.27.2"
features = ["serde"]

[dependencies.serde]
version  = "1.0.118"
features = ["derive", "rc"]

[dependencies.tokio]
version  = "0.2.24"
features = ["full"]

[dependencies.tokio-util]
version  = "0.3.1"
features = ["codec"]

[dependencies.tokio-serde]
version  = "0.6.1"
features = ["json"]

[dependencies.kentik-api]
path = "./kentik-api"

[target.'cfg(target_os = "linux")'.dependencies]
bpf  = "0.1.3"
ebpf = "0.0.4"
nell = "0.2.0"
nixv = "0.0.1"
perf = "0.0.2"

[build-dependencies]
capnpc = "0.13.1"

[patch.crates-io]
ebpf = { path = "ebpf-0.0.4" }

[profile.release]
lto   = false
debug = true
