[package]
name    = "kappa"
version = "0.0.3"
authors = ["Will <will@kentik.com>"]
edition = "2018"

[dependencies]
anyhow            = "1.0.38"
capnp             = "0.14.0"
errno             = "0.2.7"
futures           = "0.3.13"
futures-util      = "0.3.13"
jemallocator      = "0.3.2"
nix               = "0.20.0"
nixv              = "0.0.1"
num_cpus          = "1.13.0"
libc              = "0.2.87"
log               = "0.4.14"
parking_lot       = "0.11.1"
pcap              = "0.7.0"
regex             = "1.4.3"
serde_json        = "1.0.64"
signal-hook       = "0.3.6"
time              = "0.1.42"

[dependencies.clap]
version  = "2.33.3"
features = ["yaml"]
default-features = false

[dependencies.env_logger]
version  = "0.8.3"
features = ["humantime"]
default-features = false

[dependencies.pnet]
version  = "0.27.2"
features = ["serde"]

[dependencies.serde]
version  = "1.0.123"
features = ["derive", "rc"]

[dependencies.tokio]
version  = "1.4.0"
features = ["full"]

[dependencies.tokio-util]
version  = "0.6.3"
features = ["codec"]

[dependencies.tokio-serde]
version  = "0.8.0"
features = ["json"]

[dependencies.kentik-api]
path = "./kentik-api"

[target.'cfg(target_os = "linux")'.dependencies]
bpf    = "0.1.3"
ebpf   = "0.0.4"
nell   = "0.3.0"
perf   = "0.0.2"
procfs = "0.9.1"

[build-dependencies]
capnpc = "0.14.2"

[patch.crates-io]
ebpf = { path = "ebpf-0.0.4" }

[profile.release]
lto   = false
debug = true
