[package]
name    = "kentik-api"
version = "0.0.1"
authors = ["Will <will@kentik.com>"]
edition = "2018"

[dependencies]
anyhow     = "1.0.26"
http       = "0.2.0"
hyper      = "0.13.2"
log        = "0.4.8"
serde_json = "1.0.47"
url        = "2.1.1"

[dependencies.reqwest]
version  = "0.10.1"
features = ["json", "rustls-tls"]
default-features = false

[dependencies.serde]
version  = "1.0.104"
features = ["derive"]

[dev-dependencies.tokio]
version  = "0.2.11"
features = ["full"]
