[package]
name    = "kentik-api"
version = "0.0.1"
authors = ["Will <will@kentik.com>"]
edition = "2018"

[dependencies]
anyhow     = "1.0.35"
flate2     = "1.0.19"
http       = "0.2.0"
log        = "0.4.11"
serde_json = "1.0.60"
url        = "2.2.0"

[dependencies.reqwest]
version  = "0.10.10"
features = ["json", "rustls-tls"]
default-features = false

[dependencies.serde]
version  = "1.0.118"
features = ["derive"]

[dev-dependencies.tokio]
version  = "0.2.24"
features = ["full"]
