[package]
name    = "kentik-api"
version = "0.0.1"
authors = ["Will <will@kentik.com>"]
edition = "2018"

[dependencies]
anyhow     = "1.0.38"
flate2     = "1.0.20"
http       = "0.2.3"
log        = "0.4.14"
serde_json = "1.0.64"
url        = "2.2.1"

[dependencies.reqwest]
version  = "0.11.1"
features = ["json", "rustls-tls"]
default-features = false

[dependencies.serde]
version  = "1.0.123"
features = ["derive"]

[dev-dependencies.tokio]
version  = "1.2.0"
features = ["full"]
